[gd_scene load_steps=27 format=2]

[ext_resource path="res://graphics/monsters/LPS/spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Mobs/LPS.gd" type="Script" id=2]
[ext_resource path="res://Mobs/LPSWand.tscn" type="PackedScene" id=3]
[ext_resource path="res://Mobs/WanderController.tscn" type="PackedScene" id=4]
[ext_resource path="res://Mobs/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://RedColor.shader" type="Shader" id=6]
[ext_resource path="res://graphics/shadows/LargeShadow.png" type="Texture" id=7]
[ext_resource path="res://Mobs/EnemyBlinkAnimation.tscn" type="PackedScene" id=8]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 6 )
shader_param/active = false

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 4, 6 ]
}

[sub_resource type="Animation" id=3]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 2, 7, 2 ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=8]

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachine" id=14]
states/attack/node = SubResource( 5 )
states/attack/position = Vector2( 459, 180 )
states/idle/node = SubResource( 6 )
states/idle/position = Vector2( 344, 63 )
states/walk/node = SubResource( 7 )
states/walk/position = Vector2( 572, 63 )
transitions = [ "idle", "walk", SubResource( 8 ), "walk", "idle", SubResource( 9 ), "idle", "attack", SubResource( 10 ), "attack", "idle", SubResource( 11 ), "walk", "attack", SubResource( 12 ), "attack", "walk", SubResource( 13 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=15]

[sub_resource type="CapsuleShape2D" id=16]
radius = 16.2277
height = 0.0

[sub_resource type="CapsuleShape2D" id=17]
radius = 16.1135
height = 23.8556

[sub_resource type="CircleShape2D" id=18]
radius = 318.057

[node name="LPS" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )
WANDER_TARGET_RANGE = 32

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 11 )
scale = Vector2( 1.375, 1.3 )
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 14 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 15 )

[node name="BlinkAnimationPlayer" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -2 )
shape = SubResource( 16 )

[node name="LPSArea" type="Area2D" parent="." groups=[
"Enemy",
]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="LPSArea"]
position = Vector2( 0, -16 )
shape = SubResource( 17 )

[node name="LPSWand" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 64.481 )

[node name="WanderController" parent="." instance=ExtResource( 4 )]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 0, 16 )
shape = SubResource( 18 )

[connection signal="area_entered" from="LPSArea" to="." method="_on_LPSArea_area_entered"]
[connection signal="area_exited" from="LPSArea" to="." method="_on_LPSArea_area_exited"]

[editable path="PlayerDetectionZone"]
